Added stored procedure to get UserData

--- a/TRMDesktopUI/Views/LoginView.xaml
+++ b/TRMDesktopUI/Views/LoginView.xaml
@@ -19,6 +19,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
 
         </Grid.RowDefinitions>
@@ -27,20 +28,30 @@
             Login Form
             
         </TextBlock>
+        
+        <!-- Error message row -->
+        <TextBlock x:Name="ErrorMessage" Visibility="{Binding IsErrorVisible, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=collapsed}"  Grid.Row="1"
+                   Grid.Column="1" Grid.ColumnSpan="2" Margin="0 0 0 20" Foreground="Red"
+                   MaxWidth="300" TextWrapping="Wrap">
+              
+        </TextBlock>
+        
+        
+        
         <!-- User row -->
-        <TextBlock Grid.Row="1" Grid.Column="1" >
+        <TextBlock Grid.Row="2" Grid.Column="1" Margin="0 0 5 10">
             UserName:
         </TextBlock>
-        <TextBox x:Name="UserName" Grid.Row="1" Grid.Column="2" MinWidth="150" 
+        <TextBox x:Name="UserName" Grid.Row="2" Grid.Column="2" MinWidth="350" 
                  Margin="0 0 0 10"/>
         <!-- password row -->
-        <TextBlock Grid.Row="2" Grid.Column="1" >
+        <TextBlock Grid.Row="3" Grid.Column="1" Margin="0 0 5 20">
             Password:
         </TextBlock>
-        <PasswordBox x:Name="Password" Grid.Row="2" Grid.Column="2" MinWidth="150" 
-                 Margin="0 0 0 10"/>
+        <PasswordBox x:Name="Password" Grid.Row="3" Grid.Column="2" MinWidth="350" 
+                 Margin="0 0 0 20"/>
         <!-- Login row-->
-        <Button Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Padding="20 5" 
+        <Button Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Padding="20 5" 
                    HorizontalAlignment="Center" x:Name="LogIn">
             Log In
          </Button>
