--- a/TRMDesktopUI/App.xaml
+++ b/TRMDesktopUI/App.xaml
@@ -9,7 +9,12 @@
 
                     <local:Bootstrapper x:Key="Bootstrapper"  />
                 </ResourceDictionary>
+                
             </ResourceDictionary.MergedDictionaries>
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+
+
         </ResourceDictionary>
+        
     </Application.Resources>
 </Application>
